CGP: Refactor de todos los nombres que contenian 'todo' o 'task'

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     tools:context="com.uc3m.trippy.MainActivity">
 
     <ListView
-        android:id="@+id/list_todo"
+        android:id="@+id/list_trip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </RelativeLayout>
